--- a/auth/joomdle/config.html
+++ b/auth/joomdle/config.html
@@ -1,16 +1,15 @@
 <?php
-$config = get_config('', 'joomla_url');
-// set to defaults if undefined
-if (!isset($config)) {
-	$config = 'http://localhost/joomla';
+
+$joomla_url = get_config('auth/joomdle', 'joomla_url');
+if ($joomla_url == '')
+{
+	// Check if old config is present, and use it
+	$joomla_url = get_config('', 'joomla_url');
 }
-
-$joomla_version = get_config('auth/joomdle', 'joomla_version');
-if (!isset($joomla_version))
-	$joomla_version = 'j15';
-
-$jvs = array ( 'j16' => 'Joomla 1.6/1.7/2.5/3.x', 'j15' => 'Joomla 1.5.x');
-
+// set to defaults if undefined
+if (!isset($joomla_url)) {
+		$joomla_url = '';
+}
 
 $connection_method = get_config('auth/joomdle', 'connection_method');
 if (!isset($connection_method))
@@ -18,6 +17,9 @@ if (!isset($connection_method))
 
 $cms = array ( 'fgc' => 'file_get_contents', 'curl' => 'cURL' );
 
+$joomla_auth_token = get_config('auth/joomdle', 'joomla_auth_token');
+if (!isset($joomla_auth_token))
+	$joomla_auth_token = '';
 $sync_to_joomla = get_config('auth/joomdle', 'sync_to_joomla');
 if (!isset($sync_to_joomla))
 	$sync_to_joomla = 0;
@@ -60,6 +62,9 @@ if (!isset($use_kunena_forums))
 $redirectless_sso = get_config('auth/joomdle', 'redirectless_sso');
 if (!isset($redirectless_sso))
 	$redirectless_sso = 0;
+$logout_redirect_to_joomla = get_config('auth/joomdle', 'logout_redirect_to_joomla');
+if (!isset($logout_redirect_to_joomla))
+	$logout_redirect_to_joomla = 0;
 
 $yesno = array(get_string('no'), get_string('yes'));
 
@@ -69,18 +74,18 @@ $yesno = array(get_string('no'), get_string('yes'));
 <tr valign="top" class="required">
     <td align="right"><label for="joomla_url"> <?php print_string("auth_joomla_url", "auth_joomdle") ?></label></td>
     <td>
-        <input id="joomla_url" name="joomla_url" type="text" size="30" value="<?php echo $config ?>" />
+        <input id="joomla_url" name="joomla_url" type="text" size="30" value="<?php echo $joomla_url ?>" />
 
     </td>
     <td><?php print_string("auth_joomla_url_desc", "auth_joomdle") ?></td>
 </tr>
 
 <tr>
-	<td align="right"><label for="menujoomla_version"><?php print_string('auth_joomla_joomla_version', 'auth_joomdle') ?></label></td>
-	<td>
-	<?php echo html_writer::select($jvs, 'joomla_version', $joomla_version, ''); ?>
-	</td>
-	<td><?php print_string('auth_joomla_version_description', 'auth_joomdle') ?></td>
+    <td align="right"><label for="joomla_auth_token"> <?php print_string("auth_joomla_joomla_auth_token", "auth_joomdle") ?></label></td>
+    <td>
+        <input id="joomla_auth_token" name="joomla_auth_token" type="text" size="30" value="<?php echo $joomla_auth_token ?>" />
+    </td>
+    <td><?php print_string("auth_joomla_joomla_auth_token_description", "auth_joomdle") ?></td>
 </tr>
 
 <tr>
@@ -122,6 +127,14 @@ $yesno = array(get_string('no'), get_string('yes'));
 		<?php echo html_writer::select($yesno, 'redirectless_sso', $redirectless_sso, false); ?>
     </td>
     <td><?php print_string('auth_joomla_redirectless_sso_description', 'auth_joomdle') ?></td>
+</tr>
+
+<tr>
+    <td align="right"><label for="menulogout_redirect_to_joomla"><?php print_string('auth_joomla_logout_redirect_to_joomla', 'auth_joomdle') ?></label></td>
+    <td>
+		<?php echo html_writer::select($yesno, 'logout_redirect_to_joomla', $logout_redirect_to_joomla, false); ?>
+    </td>
+    <td><?php print_string('auth_joomla_logout_redirect_to_joomla_description', 'auth_joomdle') ?></td>
 </tr>
 
 <tr>
